--- a/css/main.css
+++ b/css/main.css
@@ -149,11 +149,11 @@ section {
       section:nth-child(1) {
         background-image: linear-gradient(to bottom, #47ddb0, #476fdd); } }
   section:nth-child(2) {
-    background-image: linear-gradient(to right, #476fdd 2%, rgba(71, 111, 221, 0.6), rgba(71, 221, 176, 0.6), #47ddb0 98%), url(../../imgs/wallpaper.jpg);
+    background-image: linear-gradient(to right, #476fdd 2%, rgba(71, 111, 221, 0.6), rgba(71, 221, 176, 0.6), #47ddb0 98%), url(../imgs/wallpaper.jpg);
     background-size: cover; }
     @media (max-width: 52.3em) {
       section:nth-child(2) {
-        background-image: linear-gradient(to bottom, #476fdd 2%, rgba(71, 111, 221, 0.6), rgba(71, 221, 176, 0.6), #47ddb0 98%), url(../../imgs/wallpaper.jpg); } }
+        background-image: linear-gradient(to bottom, #476fdd 2%, rgba(71, 111, 221, 0.6), rgba(71, 221, 176, 0.6), #47ddb0 98%), url(../imgs/wallpaper.jpg); } }
   section:nth-child(3) {
     background-image: linear-gradient(to right, #47ddb0, teal);
     position: relative; }
